Fix Sponsori spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -457,6 +457,7 @@ body {
     background: url(../img/background-footer.png) no-repeat center top;
     color: #000;
     padding-top: 5em;
+    margin-top: 8em;
 }
 
 /* header images */
